--- a/Lab5/index.html
+++ b/Lab5/index.html
@@ -20,14 +20,20 @@
     <header class="header">
         <img src="pngwing.com.png" alt="кошка" class="logo">
         <div class="title">Facts about cats</div>
-
     </header>
 
     <main>
         <div class="container">
             <div class="search-form">
-                <input type="text" id="search-field">
-                <button class="search-btn" id="search">Найти</button>
+                <div class="search-form-input">
+                    <input type="text" id="search-field">
+                    <button class="search-btn">Найти</button>
+                </div>
+                <div class="search-form-response">
+                    <ul class="list-input" id="list">
+
+                    </ul>
+                </div>
             </div>
 
 
