--- a/To-do-list/index.html
+++ b/To-do-list/index.html
@@ -36,7 +36,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             </div>
-            
+
             <div class="alerts-warning my-3">
                 <div class="alert alert-warning alert-dismissible fade show alert-template2 d-none" role="alert">
                     <span class="msg">
@@ -80,7 +80,8 @@
                                             title="Редактировать">
                                             <i class="fas fa-edit"></i>
                                         </a>
-                                        <a data-bs-toggle="modal" data-bs-target="#remove-task-modal" data-action="remove" title="Удалить">
+                                        <a data-bs-toggle="modal" data-bs-target="#remove-task-modal"
+                                            data-action="remove" title="Удалить">
                                             <i class="fas fa-trash-o"></i>
                                         </a>
                                         <a class="move-btn move-done" title="Переместить в колонку Done">
